...
                            </imageView>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="7aT-dS-aD3">
                                <rect key="frame" x="20" y="242" width="374" height="90"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cIP-UG-1uk">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="40"/>
                                        <accessibility key="accessibilityConfiguration" identifier="EmailInput"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="IYK-HI-VJP"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" textContentType="email"/>
                                        <connections>
                                            <action selector="email:" destination="mVp-mA-zXf" eventType="editingDidEnd" id="pGC-cn-tgU"/>
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HFG-Rv-hJ2">
                                        <rect key="frame" x="0.0" y="50" width="374" height="40"/>
                                        <accessibility key="accessibilityConfiguration" identifier="PasswordInput"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="sdn-rr-0la"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                    </textField>
                                </subviews>
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fjg-0B-9Im">
                                <rect key="frame" x="40" y="352" width="334" height="40"/>
                                <color key="backgroundColor" name="AccentColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="btnLogin"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="uqI-6L-6aQ"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="Log In">
                                    <color key="titleColor" systemColor="secondarySystemGroupedBackgroundColor"/>
...
